feat: add custom 404 page, remove playground quick start templates, and adjust global CSS.

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,26 @@
 {
   "cleanUrls": true,
-  "trailingSlash": false
+  "trailingSlash": false,
+  "redirects": [
+    {
+      "source": "/vercel.json",
+      "destination": "/404",
+      "statusCode": 404
+    },
+    {
+      "source": "/.gitignore",
+      "destination": "/404",
+      "statusCode": 404
+    },
+    {
+      "source": "/.git/:path*",
+      "destination": "/404",
+      "statusCode": 404
+    },
+    {
+      "source": "/README.md",
+      "destination": "/404",
+      "statusCode": 404
+    }
+  ]
 }
